# agentos

./: .env.example  COMMANDS.md  CONTRIBUTING.md  README.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  agent.yaml  cli_err.txt  cli_err_92.txt  cli_out.txt  eval_report.html  fetch_metrics.py  list_debug.txt  list_final.txt  main.py  metrics_output.txt  pyproject.toml  senior_dev.yaml  test_a2a_final.py  test_auto_rag.py  test_builtins.py  test_logging.py  test_mcp_integration.py  test_sdk_example.py  time_tool.py  verify_phase7.db
backend/scripts/: verify_reporting.py
backend/src/agentos/: test_tools.py
backend/src/agentos/api/: app.py
backend/src/agentos/api/routes/: agents.py  console.py  evaluations.py  memory.py  metrics.py  plugins.py  tasks.py
backend/src/agentos/cli/: client.py  main.py
backend/src/agentos/cli/cmds/: __init__.py  agents.py  init.py  plugins.py  tasks.py
backend/src/agentos/core/manager/: database.py  models.py  service.py
backend/src/agentos/core/memory/: cache.py  short_term.py  vector.py
backend/src/agentos/core/orchestrator/: celery_app.py  models.py  service.py  tasks.py
backend/src/agentos/sdk/: __init__.py  client.py
backend/storage/audit/: audit_log.jsonl
backend/storage/metrics/: counter_11172.db  counter_1684.db  histogram_11172.db  histogram_1684.db
backend/tests/: test_advanced_evaluators.py  test_audit_logging.py  test_cli.py  test_evaluation_pipeline.py  test_mcp_server.py  test_memory.py  test_real_world_eval.py  test_task_tracing.py  test_tracing_scenario.py  test_vector.py
dashboard/: Dockerfile  (+2 more)
(+75 files in other folders)
